--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+RewriteEngine On
+
 RewriteCond %{SCRIPT_FILENAME} -f
 RewriteCond %{SCRIPT_FILENAME} (.*?).htm[l]?$
 RewriteCond %{SCRIPT_FILENAME} !index.php
