--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test": "test"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
+    "gulp": "^3.9.1",
+    "http": "0.0.0",
+    "jsdom": "^9.8.0",
     "selenium-webdriver": "^2.53.3"
   },
   "devDependencies": {
