--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "http": "0.0.0",
     "jsdom": "^9.8.0",
+    "mkdirp": "^0.5.1",
     "selenium-webdriver": "^2.53.3"
   },
   "devDependencies": {
