--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "email",
+  "name": "edward",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,14 +17,25 @@
     "selenium-webdriver": "^2.53.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "clean-up-string": "^1.0.0",
+    "css-stringify": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-extract-media-queries": "^1.0.2",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-strip-css-comments": "^1.2.0",
+    "gulp-util": "^3.0.8",
+    "rework": "^1.0.1",
+    "rework-move-media": "0.0.5",
+    "rework-split-media": "0.0.1",
+    "through2": "^2.0.3",
+    "wrench": "^1.5.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "http://dsg.chongtastic.com:8080/DellSoftwareGroup/Email"
+    "url": "http://review.chongtastic.com/r/Questsoftware/Email"
   },
   "author": "Edward Chong",
   "license": "ISC"
